--- a/public/archive.html
+++ b/public/archive.html
@@ -155,121 +155,123 @@
         <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous" defer></script>
         <script>
             var game;
-            var board;
-            var currentMoveIndex = 0;
+var board;
+var currentMoveIndex = 0;
 
-            function initializeChessboard() {
-                console.log('Initializing Chessboard.js...');
+function initializeChessboard() {
+    console.log('Initializing Chessboard.js...');
 
-                // Initialize Chessboard
-                board = Chessboard('board', {
-                    draggable: true,
-                    position: 'start'
-                });
+    // Initialize Chessboard
+    board = Chessboard('board', {
+        draggable: true,
+        position: 'start'
+    });
 
-                // Initialize Chess game
-                game = new Chess();
+    // Initialize Chess game
+    game = new Chess();
 
-                // Load game button event
-                document.getElementById('loadGameBtn').addEventListener('click', function() {
-                    var pgnInput = document.getElementById('pgnInput').value;
-                    loadGame(pgnInput);
-                });
+    // Load game button event
+    document.getElementById('loadGameBtn').addEventListener('click', function() {
+        var pgnInput = document.getElementById('pgnInput').value;
+        loadGame(pgnInput);
+    });
 
-                // Previous move button event
-                document.getElementById('prevMoveBtn').addEventListener('click', function() {
-                    if (currentMoveIndex > 0) {
-                        currentMoveIndex--;
-                        updateBoard();
-                    }
-                });
+    // Previous move button event
+    document.getElementById('prevMoveBtn').addEventListener('click', function() {
+        if (currentMoveIndex > 0) {
+            currentMoveIndex--;
+            updateBoard();
+        }
+    });
 
-                // Next move button event
-                document.getElementById('nextMoveBtn').addEventListener('click', function() {
-                    if (currentMoveIndex < game.history().length) {
-                        currentMoveIndex++;
-                        updateBoard();
-                    }
-                });
-            }
+    // Next move button event
+    document.getElementById('nextMoveBtn').addEventListener('click', function() {
+        if (currentMoveIndex < game.history().length) {
+            currentMoveIndex++;
+            updateBoard();
+        }
+    });
+}
 
-            function loadGame(pgn) {
-                console.log('Loading PGN:', pgn);
+function loadGame(pgn) {
+    console.log('Loading PGN:', pgn);
 
-                game.reset(); // Reset the game to initial state
-                board.position('start'); // Reset board to initial state
+    game.reset(); // Reset the game to initial state
+    board.position('start'); // Reset board to initial state
 
-                game.load_pgn(pgn); // Load new game
+    // Load new game
+    game.load_pgn(pgn);
 
-                // Update the board with the game state
-                board.position(game.fen()); 
+    // Update the board with the game state
+    board.position(game.fen()); 
 
-                currentMoveIndex = 0; // Start at the beginning
-                displayGameInfo(pgn);
-                updateMoveList();
-            }
+    currentMoveIndex = 0; // Start at the beginning
+    displayGameInfo(pgn);
+    updateMoveList();
+}
 
-            function displayGameInfo(pgn) {
-                var players = getPgnPlayers(pgn);
-                if (players) {
-                    var gameInfoDiv = document.getElementById('gameInfo');
-                    gameInfoDiv.innerHTML = `<p>${players.white} (W) vs ${players.black} (B)</p>`;
-                }
-            }
+function displayGameInfo(pgn) {
+    var players = getPgnPlayers(pgn);
+    if (players) {
+        var gameInfoDiv = document.getElementById('gameInfo');
+        gameInfoDiv.innerHTML = `<p>${players.white} (W) vs ${players.black} (B)</p>`;
+    }
+}
 
-            function getPgnPlayers(pgn) {
-                var regex = /\[White "([^"]*)"\][\s\S]*\[Black "([^"]*)"\]/;
-                var match = pgn.match(regex);
-                if (match) {
-                    return {
-                        white: match[1],
-                        black: match[2]
-                    };
-                }
-                return null;
-            }
+function getPgnPlayers(pgn) {
+    var regex = /\[White "([^"]*)"\][\s\S]*\[Black "([^"]*)"\]/;
+    var match = pgn.match(regex);
+    if (match) {
+        return {
+            white: match[1],
+            black: match[2]
+        };
+    }
+    return null;
+}
 
-            function updateMoveList() {
-                var moveList = document.getElementById('moveList');
-                var moves = game.history({ verbose: true });
-                moveList.innerHTML = '';
-                moves.forEach(function(move, index) {
-                    var moveItem = document.createElement('li');
-                    moveItem.textContent = move.san;
-                    moveItem.addEventListener('click', function() {
-                        currentMoveIndex = index;
-                        updateBoard();
-                    });
-                    moveList.appendChild(moveItem);
-                });
-            }
+function updateMoveList() {
+    var moveList = document.getElementById('moveList');
+    var moves = game.history({ verbose: true });
+    moveList.innerHTML = '';
+    moves.forEach(function(move, index) {
+        var moveItem = document.createElement('li');
+        moveItem.textContent = move.san;
+        moveItem.classList.add('move-item');
+        moveItem.addEventListener('click', function() {
+            currentMoveIndex = index;
+            updateBoard();
+        });
+        moveList.appendChild(moveItem);
+    });
+}
 
-            function updateBoard() {
-                var moves = game.history({ verbose: true });
-                if (currentMoveIndex < moves.length && currentMoveIndex >= 0) {
-                    board.position(moves[currentMoveIndex].fen);
-                }
-                updateMoveList();
-            }
+function updateBoard() {
+    var moves = game.history({ verbose: true });
+    if (currentMoveIndex < moves.length && currentMoveIndex >= 0) {
+        board.position(moves[currentMoveIndex].fen);
+    }
+    updateMoveList();
+}
 
-            function loadGameFromFile(filePath) {
-                fetch(filePath)
-                    .then(response => response.text())
-                    .then(pgn => loadGame(pgn))
-                    .catch(error => console.error('Error loading PGN file:', error));
-            }
+function loadGameFromFile(filePath) {
+    fetch(filePath)
+        .then(response => response.text())
+        .then(pgn => loadGame(pgn))
+        .catch(error => console.error('Error loading PGN file:', error));
+}
 
-            document.addEventListener('DOMContentLoaded', function() {
-                initializeChessboard();
+document.addEventListener('DOMContentLoaded', function() {
+    initializeChessboard();
 
-                document.querySelectorAll('.game-file-link').forEach(link => {
-                    link.addEventListener('click', function(event) {
-                        event.preventDefault();
-                        var filePath = this.getAttribute('data-file');
-                        loadGameFromFile(filePath);
-                    });
-                });
-            });
+    document.querySelectorAll('.game-file-link').forEach(link => {
+        link.addEventListener('click', function(event) {
+            event.preventDefault();
+            var filePath = this.getAttribute('data-file');
+            loadGameFromFile(filePath);
+        });
+    });
+});
         </script>
     </div>
 </body>
